# mynotebook

./: README.md  pyproject.toml
mynotebook/: console.py
notebooks/: julia.ipynb  numpy.ipynb
tests/: test_console.py  test_mynotebook.py
