[tool.poetry]
name = "mynotebook"
version = "0.1.0"
description = ""
authors = ["Prasetiyo Hadi Purwoko <pras@deuterion.net>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
mynotebook = "mynotebook.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
